// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryToolbar should render desc direction 1`] = `
<Button
  icon={
    <Icon
      size="md"
    >
      <SortAmountDownIcon />
    </Icon>
  }
  onClick={[Function]}
  variant="plain"
/>
`;

exports[`PrimaryToolbar should render no data 1`] = `
<Button
  icon={
    <Icon
      size="md"
    >
      <SortAmountUpIcon />
    </Icon>
  }
  onClick={[Function]}
  variant="plain"
/>
`;
